--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Jaewoong&#39;s Todo</title>
+    <meta property="og:title" content="정재웅의 Todo App" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://iridescent-pika-9b015e.netlify.app/"
+    />
+    <meta
+      property="og:image"
+      content="https://iridescent-pika-9b015e.netlify.app/images/og.webp"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
